Bug 361801 - discover should show error when no appstream data
Summary: discover should show error when no appstream data
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: PackageKit (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-04-15 09:55 UTC by Jonathan Riddell
Modified: 2017-08-03 18:43 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonathan Riddell 2016-04-15 09:55:28 UTC
Using plasma-discover from KDE neon git-unstable today I run discover and it shows lots of empty panels
http://weegie.edinburghlinux.co.uk/~jr/tmp/discover1.png
The problem is in appstream as when I use cli I get
>appstreamcli get org.kde.dolphin.desktop --details
Unable to find component with id 'org.kde.dolphin.desktop'!

but discover should show an error message rather than just carry on regardless

Reproducible: Always
Comment 1 Aleix Pol 2016-04-20 11:33:02 UTC
Git commit fb2b1aee026ba476556f5cd7f7e8f07f6847e857 by Aleix Pol.
Committed on 20/04/2016 at 11:32.
Pushed by apol into branch 'master'.

Show a nice error message when appstream isn't installed

M  +6    -0    libdiscover/backends/PackageKitBackend/PackageKitBackend.cpp

http://commits.kde.org/discover/fb2b1aee026ba476556f5cd7f7e8f07f6847e857