Show a nice error message when appstream isn't installed

BUG: 361801